--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="password_hint">Password</string>
     <string name="email_hint">E-mail</string>
     <string name="sign_up_button_text">Sign Up</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="repeat_password">Repeat Password</string>
+    <string name="birth_date">Birth Date</string>
+    <string name="user_name">User Name</string>
 </resources>
