--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="profile">Profile</string>
     <string name="social">Social</string>
     <string name="settings">Settings</string>
+    <string name="stream_button_name">STREAM</string>
 </resources>
