--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="social">Social</string>
     <string name="settings">Settings</string>
     <string name="stream_button_name">STREAM</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="search_hint">Search a user</string>
+    <string name="search">SEARCH</string>
 </resources>
