--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="social">Social</string>
     <string name="settings">Settings</string>
     <string name="stream_button_name">STREAM</string>
+    <string name="start_session">Start Session</string>
 </resources>
